--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,23 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.focused {
-  height: 60%;
+@keyframes inAnimation {
+  0% {
+    opacity: 0;
+    visibility: hidden;
+  }
+  100% {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
+@keyframes outAnimation {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
 }
