--- a/src/index.css
+++ b/src/index.css
@@ -10,23 +10,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-@keyframes inAnimation {
-  0% {
-    opacity: 0;
-    visibility: hidden;
-  }
-  100% {
-    opacity: 1;
-    visibility: visible;
-  }
-}
-
-@keyframes outAnimation {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-    visibility: hidden;
-  }
+.sweat {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  bottom: 50%;
+  right: 20%;
 }
